--- a/lesson_08/package.json
+++ b/lesson_08/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
-    "framer-motion": "^6.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "styled-components": "^6.1.18",
