--- a/lesson_11/package.json
+++ b/lesson_11/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson_11_zustand",
+  "name": "lesson_11",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.79.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zustand": "^5.0.5"
