--- a/lesson_11/package.json
+++ b/lesson_11/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.79.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
+    "zod": "^3.25.48",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
